--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -29,3 +29,13 @@
   bottom: -50px;
   filter: blur(200px);
 }
+.circleBlurLH{
+  width: 423px;
+  height: 423px;
+  background-color: #8A2BE2;
+  border-radius: 50%;
+  position: absolute;
+  left: -150px;
+  bottom: -200px;
+  filter: blur(200px);
+}
